--- a/sample/metrics.ipynb
+++ b/sample/metrics.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/huangzhitong/anaconda3/envs/unicolor/lib/python3.7/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -17,21 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_path = 'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\original'\n",
+    "original_path = '../results/old_coco_259999/original'\n",
     "\n",
     "test_paths = [\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\colorful',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\real_time',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\deoldify',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\instcolorization',\n",
-    "    'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\chromagan',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\vivid',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\coltran',\n",
-    "    #'C:\\\\Users\\\\lucky\\\\Desktop\\\\colorization_results\\\\raw\\\\coco\\\\ours',\n",
+    "    '../results/old_coco_259999/colorized',\n",
+    "    '../results/new_coco_299999/colorized'\n",
     "]"
    ]
   },
@@ -44,9 +47,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:04<00:00,  1.55it/s]\n",
+      "100%|██████████| 100/100 [01:06<00:00,  1.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../results/old_coco_259999/original \n",
+      " ../results/old_coco_259999/colorized \n",
+      " FID score: 7.809005101211142\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 100/100 [01:08<00:00,  1.46it/s]\n",
+      "100%|██████████| 100/100 [01:07<00:00,  1.47it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "../results/old_coco_259999/original \n",
+      " ../results/new_coco_299999/colorized \n",
+      " FID score: 8.265271639647949\n"
+     ]
+    }
+   ],
    "source": [
     "from pytorch_fid import fid_score\n",
     "\n",
@@ -361,11 +399,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "4d703c633b54b2fa5838b43c4e4963eee49000d73a8d9f4372c69dbdf8920ce3"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.0 ('base')",
+   "display_name": "Python 3.7.13 ('unicolor')",
    "language": "python",
    "name": "python3"
   },
@@ -379,9 +414,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d2a626b74e299e13c7ec875d6c47b0f8e040df285fc56a1acf5a98c054a62f0a"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
