--- a/sample/unsorted_codes/ablation.ipynb
+++ b/sample/unsorted_codes/ablation.ipynb
@@ -523,11 +523,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0600588c3b5f4418cbe7b5ebc6825b479f3bc010269d8b60d75058cdd010adfe"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3.8.3 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -541,9 +538,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.3"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "d2a91ca3d26e2d2b798fe8778458ed9052c39446826a52af3c736ec2371151af"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
